Use separate endpoint per workload kind (#41)
